headers/ox-block.h

struct nvm_ppa_addr {
    /* Generic structure for all addresses */
    union {
        struct {
            uint64_t sec   : 3;
            uint64_t pl    : 2;
            uint64_t ch    : 12;
            uint64_t lun   : 6;
            uint64_t pg    : 12;
            uint64_t blk   : 15;
            uint64_t rsv   : 14;
        } g;

        uint64_t ppa;
    };
};
struct nvm_memory_region {
    uint64_t     addr;
    uint64_t     paddr;
    uint64_t     size;
    uint8_t      is_valid;
};
typedef void (nvm_callback_fn) (void *arg);
struct nvm_callback {
    nvm_callback_fn *cb_fn;
    void            *opaque;
    uint64_t         ts;
};
struct nvm_io_status {
    uint8_t     status;       /* global status for the cmd */
    uint16_t    nvme_status;  /* status to send to host */
    uint32_t    pg_errors;    /* n of errors */
    uint32_t    total_pgs;
    uint16_t    pgs_p;        /* pages processed within iteration */
    uint16_t    pgs_s;        /* pages success in request */
    uint16_t    ret_t;        /* retried times */
    uint8_t     pg_map[8];    /* pgs to retry */
};
typedef void    (nvm_mmgr_exit)(struct nvm_mmgr *);