src/generated_bindings/volt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_ppa_addr__bindgen_ty_1__bindgen_ty_1"]
        [::core::mem::size_of::<nvm_ppa_addr__bindgen_ty_1__bindgen_ty_1>() - 8usize];
    ["Alignment of nvm_ppa_addr__bindgen_ty_1__bindgen_ty_1"]
        [::core::mem::align_of::<nvm_ppa_addr__bindgen_ty_1__bindgen_ty_1>() - 8usize];
};
impl nvm_ppa_addr__bindgen_ty_1__bindgen_ty_1 {
    #[inline]
    pub fn sec(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 3u8) as u64) }
    }
    #[inline]
    pub fn set_sec(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 3u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn sec_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                0usize,
                3u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_sec_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                0usize,
                3u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn pl(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(3usize, 2u8) as u64) }
    }
    #[inline]
    pub fn set_pl(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(3usize, 2u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn pl_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                3usize,
                2u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_pl_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                3usize,
                2u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn ch(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(5usize, 12u8) as u64) }
    }
    #[inline]
    pub fn set_ch(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(5usize, 12u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn ch_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                5usize,
                12u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_ch_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                5usize,
                12u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn lun(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(17usize, 6u8) as u64) }
    }
    #[inline]
    pub fn set_lun(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(17usize, 6u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn lun_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                17usize,
                6u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_lun_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                17usize,
                6u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn pg(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(23usize, 12u8) as u64) }
    }
    #[inline]
    pub fn set_pg(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(23usize, 12u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn pg_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                23usize,
                12u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_pg_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                23usize,
                12u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn blk(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(35usize, 15u8) as u64) }
    }
    #[inline]
    pub fn set_blk(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(35usize, 15u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn blk_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                35usize,
                15u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_blk_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                35usize,
                15u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn rsv(&self) -> u64 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(50usize, 14u8) as u64) }
    }
    #[inline]
    pub fn set_rsv(&mut self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            self._bitfield_1.set(50usize, 14u8, val as u64)
        }
    }
    #[inline]
    pub unsafe fn rsv_raw(this: *const Self) -> u64 {
        unsafe {
            ::core::mem::transmute(<__BindgenBitfieldUnit<[u8; 8usize]>>::raw_get(
                ::core::ptr::addr_of!((*this)._bitfield_1),
                50usize,
                14u8,
            ) as u64)
        }
    }
    #[inline]
    pub unsafe fn set_rsv_raw(this: *mut Self, val: u64) {
        unsafe {
            let val: u64 = ::core::mem::transmute(val);
            <__BindgenBitfieldUnit<[u8; 8usize]>>::raw_set(
                ::core::ptr::addr_of_mut!((*this)._bitfield_1),
                50usize,
                14u8,
                val as u64,
            )
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        sec: u64,
        pl: u64,
        ch: u64,
        lun: u64,
        pg: u64,
        blk: u64,
        rsv: u64,
    ) -> __BindgenBitfieldUnit<[u8; 8usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 8usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 3u8, {
            let sec: u64 = unsafe { ::core::mem::transmute(sec) };
            sec as u64
        });
        __bindgen_bitfield_unit.set(3usize, 2u8, {
            let pl: u64 = unsafe { ::core::mem::transmute(pl) };
            pl as u64
        });
        __bindgen_bitfield_unit.set(5usize, 12u8, {
            let ch: u64 = unsafe { ::core::mem::transmute(ch) };
            ch as u64
        });
        __bindgen_bitfield_unit.set(17usize, 6u8, {
            let lun: u64 = unsafe { ::core::mem::transmute(lun) };
            lun as u64
        });
        __bindgen_bitfield_unit.set(23usize, 12u8, {
            let pg: u64 = unsafe { ::core::mem::transmute(pg) };
            pg as u64
        });
        __bindgen_bitfield_unit.set(35usize, 15u8, {
            let blk: u64 = unsafe { ::core::mem::transmute(blk) };
            blk as u64
        });
        __bindgen_bitfield_unit.set(50usize, 14u8, {
            let rsv: u64 = unsafe { ::core::mem::transmute(rsv) };
            rsv as u64
        });
        __bindgen_bitfield_unit
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_ppa_addr__bindgen_ty_1"]
        [::core::mem::size_of::<nvm_ppa_addr__bindgen_ty_1>() - 8usize];
    ["Alignment of nvm_ppa_addr__bindgen_ty_1"]
        [::core::mem::align_of::<nvm_ppa_addr__bindgen_ty_1>() - 8usize];
    ["Offset of field: nvm_ppa_addr__bindgen_ty_1::g"]
        [::core::mem::offset_of!(nvm_ppa_addr__bindgen_ty_1, g) - 0usize];
    ["Offset of field: nvm_ppa_addr__bindgen_ty_1::ppa"]
        [::core::mem::offset_of!(nvm_ppa_addr__bindgen_ty_1, ppa) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_ppa_addr"][::core::mem::size_of::<nvm_ppa_addr>() - 8usize];
    ["Alignment of nvm_ppa_addr"][::core::mem::align_of::<nvm_ppa_addr>() - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_memory_region {
    pub addr: u64,
    pub paddr: u64,
    pub size: u64,
    pub is_valid: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_memory_region"][::core::mem::size_of::<nvm_memory_region>() - 32usize];
    ["Alignment of nvm_memory_region"][::core::mem::align_of::<nvm_memory_region>() - 8usize];
    ["Offset of field: nvm_memory_region::addr"]
        [::core::mem::offset_of!(nvm_memory_region, addr) - 0usize];
    ["Offset of field: nvm_memory_region::paddr"]
        [::core::mem::offset_of!(nvm_memory_region, paddr) - 8usize];
    ["Offset of field: nvm_memory_region::size"]
        [::core::mem::offset_of!(nvm_memory_region, size) - 16usize];
    ["Offset of field: nvm_memory_region::is_valid"]
        [::core::mem::offset_of!(nvm_memory_region, is_valid) - 24usize];
};
pub type nvm_callback_fn =
    ::core::option::Option<unsafe extern "C" fn(arg: *mut ::core::ffi::c_void)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_callback {
    pub cb_fn: nvm_callback_fn,
    pub opaque: *mut ::core::ffi::c_void,
    pub ts: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_callback"][::core::mem::size_of::<nvm_callback>() - 24usize];
    ["Alignment of nvm_callback"][::core::mem::align_of::<nvm_callback>() - 8usize];
    ["Offset of field: nvm_callback::cb_fn"][::core::mem::offset_of!(nvm_callback, cb_fn) - 0usize];
    ["Offset of field: nvm_callback::opaque"]
        [::core::mem::offset_of!(nvm_callback, opaque) - 8usize];
    ["Offset of field: nvm_callback::ts"][::core::mem::offset_of!(nvm_callback, ts) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_io_status {
    pub status: u8,
    pub nvme_status: u16,
    pub pg_errors: u32,
    pub total_pgs: u32,
    pub pgs_p: u16,
    pub pgs_s: u16,
    pub ret_t: u16,
    pub pg_map: [u8; 8usize],
}
